fix card inline spacing glitch

--- a/public/style.css
+++ b/public/style.css
@@ -226,6 +226,7 @@ button:hover {
         transform-origin: center;
         margin: 10px;
         white-space: normal;
+        vertical-align: bottom;
     }
 }
 
